--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -97,6 +97,7 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   left: 50%;
   margin-left: -150px;
   top: 150px;
+  z-index: 300;
 }
 
 /*  ----------------------------   
@@ -985,6 +986,8 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
       border-radius: 50%;
       background: #f52d32;
       padding: 5px 10px;
+      height: 30px;
+      line-height: 1.5em;
       &:hover {
         cursor: pointer;
         opacity: 0.8;
@@ -992,7 +995,10 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     }
   }
 }
-
+.my-bikes {
+  height: 100%;
+  text-align: center;
+}
 
 /*  ----------------------------   
     MODAL REPORT
