--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
               <li>
               <%= link_to 'mi perfil', edit_user_registration_path %>
               </li>
+              <li><%= link_to 'mis bicicletas', user_bikes_path %></li>
               <li class="divider"></li>
               <li>
               <%= link_to "salir", destroy_user_session_path, method: :delete, :class => 'btn btn-purple'  %>
@@ -57,7 +58,7 @@
             </li>
             <li class="disabled"><a href="../navbar-static-top/">ayuda</a></li>
           </ul>
-          <% else %>|
+          <% else %>
             
 
 
