--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,67 @@
-<div class="bla">
-  home 
-  
+<div class="home">
+  <div class="container-fluid main">
+    <div class="cta">
+      <div class="the-calling">
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam voluptatem itaque doloribus harum quae voluptates.
+        </p>
+      </div>
+      <div class="col-md-4 one">
+        <div class="btn-cta">
+          <div class="container-icon">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="85" viewbox="0 0 576 448"><g id="icomoon-ignore">
+            </g>
+            <path class="svg-icon" d="M190.5 288h-78.5q-10 0-14.375-8.75t1.625-16.75l47-62.75q-16.25-7.75-34.25-7.75-33 0-56.5 23.5t-23.5 56.5 23.5 56.5 56.5 23.5q28.75 0 50.75-18.125t27.75-45.875zM144 256h46.5q-4.5-21.25-18.75-37zM264 256l72-96h-120l-24.75 33q26.25 25.75 31.5 63h41.25zM544 272q0-33-23.5-56.5t-56.5-23.5q-15 0-30.25 6l43.5 65q3.75 5.75 2.5 12.25t-6.75 10q-3.75 2.75-9 2.75-8.75 0-13.25-7.25l-43.5-65q-23.25 23.75-23.25 56.25 0 33 23.5 56.5t56.5 23.5 56.5-23.5 23.5-56.5zM576 272q0 46.25-32.875 79.125t-79.125 32.875-79.125-32.875-32.875-79.125q0-24.25 9.875-45.875t27.375-37.375l-16.25-24.5-88.25 117.25q-4.5 6.5-12.75 6.5h-49.25q-5.75 41-37.25 68.5t-73.5 27.5q-46.25 0-79.125-32.875t-32.875-79.125 32.875-79.125 79.125-32.875q28.5 0 53.75 13.75l34.25-45.75h-56q-6.5 0-11.25-4.75t-4.75-11.25 4.75-11.25 11.25-4.75h96v32h108.75l-21.25-32h-55.5q-6.5 0-11.25-4.75t-4.75-11.25 4.75-11.25 11.25-4.75h64q8.25 0 13.25 7l66.75 100q22.75-11 48-11 46.25 0 79.125 32.875t32.875 79.125z"></path>
+            </svg>
+          </div>
+          <%= link_to 'registrar bici', new_bike_path %>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor impedit amet, aliquam perspiciatis sit laudantium?
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4 two">
+        <div class="btn-cta">
+          <div class="container-icon">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="75" height="75" viewbox="0 0 512 512"><g id="icomoon-ignore">
+            </g>
+            <path class="svg-icon" d="M0 0h64v512h-64v-512z"></path>
+            <path class="svg-icon" d="M416 321.501c41.312 0 77.285-9.992 96-24.75v-256c-18.715 14.759-54.688 24.751-96 24.751s-77.285-9.992-96-24.751v256c18.715 14.758 54.688 24.75 96 24.75z"></path>
+            <path class="svg-icon" d="M304 16.264c-23.453-9.97-57.76-16.264-96-16.264-48.198 0-90.167 9.992-112 24.751v256c21.833-14.759 63.802-24.751 112-24.751 38.24 0 72.547 6.294 96 16.264v-256z"></path>
+            </svg>
+          </div>
+          <a href="#modal-report" class="fancybox">reportar</a>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe neque ratione, blanditiis suscipit molestiae cum! Quo aperiam.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4 three">
+        <div class="btn-cta">
+          <div class="container-icon">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="75" height="75" viewbox="0 0 512 512"><g id="icomoon-ignore">
+            </g>
+            <path class="svg-icon" d="M256 0c-141.385 0-256 114.615-256 256s114.615 256 256 256 256-114.615 256-256-114.615-256-256-256zM48 256c0-114.875 93.125-208 208-208 54.787 0 104.616 21.193 141.767 55.814l-205.767 88.186-88.186 205.767c-34.621-37.151-55.814-86.98-55.814-141.767zM292.583 292.583l-128.041 54.875 54.875-128.041 73.166 73.166zM256 464c-54.787 0-104.617-21.193-141.766-55.814l205.766-88.186 88.186-205.766c34.621 37.149 55.814 86.979 55.814 141.766 0 114.875-93.125 208-208 208z"></path>
+            </svg>
+          </div>
+          <a href="buscar.html">buscar</a>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe neque ratione, blanditiis suscipit molestiae cum! Quo aperiam.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="hidden">
+  <div class="modal-report" id="modal-report">
+    <h3>¿Qué quiere reportar?</h3>
+    <p>
+      Recuerde que para reportar algo, necesita registrarse.<br>
+       Si no lo ha hecho, por favor <%= link_to "haga clic aquí para registrarse", new_user_registration_path %>
+    </p>
+    <%= link_to 'reportar bicicleta robada', '/theft_reports/new', :class => 'btn' %><br>
+    <%= link_to 'reportar local', '/store_reports/new', :class => 'btn btn-secondary' %>
+  </div>
 </div>
