--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-        <a href="index.html" class="navbar-brand">
-        <h1>Proyecto</h1>
-        </a>
+        <%= link_to 'go (beta)', root_path, :class => 'navbar-brand' %>
       </div>
       <div class="navbar-collapse collapse" id="navbar">
         <ul class="nav navbar-nav">
@@ -30,9 +28,13 @@
           reportar <span class="caret"></span>
           </a>
           <ul role="menu" class="dropdown-menu">
-            <li><a href="reportar-robo.html">robo de bicicleta</a></li>
+            <li>
+            <%= link_to 'robo de bicicleta', '/theft_reports/new' %>
+            </li>
             <li class="divider"></li>
-            <li><a href="reportar-local.html">local que vende bicicletas robadas</a></li>
+            <li>
+            <%= link_to 'local', '/store_reports/new' %>
+            </li>
           </ul>
           </li>
           <li class="disabled"><a href="blog.html">blog</a></li>
@@ -133,13 +135,15 @@
 <footer class="main-footer">
   <div class="container-fluid">
     <ul>
-      <li><a href="que-es-esto.html">¿qué es esto?</a></li>
+      <li>
+      <%= link_to '¿qué es esto?', '/about' %>
+      </li>
       <li class="disabled"><a href="">términos de uso</a></li>
       <li class="disabled"><a href="">política de privacidad</a></li>
     </ul>
   </div>
   <div class="copyright">
-    <p>© 2015 nombre del proyecto</p>
+    <p>© 2015 go (beta)</p>
   </div>
 </footer>
 </body>
