--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
       </div>
       <div class="navbar-collapse collapse" id="navbar">
         <ul class="nav navbar-nav">
-          <li><a href="buscar.html">buscar</a></li>
+          <li>
+          <%= link_to 'reportes', '/reports/index' %>
+          </li>
           <li class="dropdown" role="presentation">
           <a aria-expanded="false" role="button" href="#" data-toggle="dropdown" class="dropdown-toggle">
           reportar <span class="caret"></span>
