--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
             <path class="svg-icon" d="M256 0c-141.385 0-256 114.615-256 256s114.615 256 256 256 256-114.615 256-256-114.615-256-256-256zM48 256c0-114.875 93.125-208 208-208 54.787 0 104.616 21.193 141.767 55.814l-205.767 88.186-88.186 205.767c-34.621-37.151-55.814-86.98-55.814-141.767zM292.583 292.583l-128.041 54.875 54.875-128.041 73.166 73.166zM256 464c-54.787 0-104.617-21.193-141.766-55.814l205.766-88.186 88.186-205.766c34.621 37.149 55.814 86.979 55.814 141.766 0 114.875-93.125 208-208 208z"></path>
             </svg>
           </div>
-          <a href="buscar.html">buscar</a>
+          <%= link_to 'buscar reportes', '/reports/index' %>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe neque ratione, blanditiis suscipit molestiae cum! Quo aperiam.
           </p>
