--- a/app/views/theft_reports/show.html.erb
+++ b/app/views/theft_reports/show.html.erb
@@ -7,9 +7,9 @@
 
         <div class="col-md-12 section-title">
           <h3 class="item-title">
-            <%= 'Marca: ' + @theftReports.bike.bike_brand + ' - '%>
-            <%= 'Modelo: ' + @theftReports.bike.bike_model + ' - '%>
-            <%= 'Color: ' + @theftReports.bike.bike_color %>
+            <span><%= 'Marca: ' + @theftReports.bike.bike_brand + ' - '%></span>
+            <span><%= 'Modelo: ' + @theftReports.bike.bike_model + ' - '%></span>
+            <span><%= 'Color: ' + @theftReports.bike.bike_color %></span>
           </h3>
           <span class="item-serial-number">
             <%= 'Serial: ' + @theftReports.bike.bike_serial %>
