--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,6 +12,28 @@
   color: #000;
   padding: 0.2em 0;
 }
+/* =======================   MEDIA QUERIES   ======================  */
+@mixin breakpoint($point) {
+    @if $point == xl {
+        @media (max-width: 1365px) { @content; }
+    }
+    @if $point == lrg {
+        @media (max-width: 1199px) { @content; }
+    }
+    @else if $point == md {
+        @media (max-width: 991px) { @content; }
+    }
+    @else if $point == sm {
+        @media (max-width: 767px)  { @content; }
+    }
+    @else if $point == xs {
+        @media (max-width: 550px)  { @content; }
+    }
+    @else if $point == xxs {
+        @media (max-width: 400px)  { @content; }
+    }
+}
+
 
 /*  ----------------------------   
     GENERAL
@@ -141,6 +163,9 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   text-transform: uppercase;
   width: 100%;
   z-index: 5;
+  @include breakpoint(xxs) { 
+    text-align: center;
+  }
   a {
     font-family: 'Montserrat', sans-serif;
 
@@ -156,6 +181,11 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     li {
       display: inline-block;
       margin-right: 35px;
+      @include breakpoint(xxs) { 
+        margin-right: 0;
+        display: block;
+        margin-bottom: 15px;
+      }
       &:last-child {
         margin-right: 0;
       }
@@ -170,6 +200,9 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     position: absolute;
     left: 15px;
     top: 15px;
+    @include breakpoint(xxs) { 
+      position: relative;
+    }
   }
 }
 
@@ -236,6 +269,10 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     position: absolute;
     text-align: center;
     width: 100%;
+    @include breakpoint(md) { 
+      width: auto;
+      bottom: 30%;
+    }
     a {
       color: #fff;
       text-transform: uppercase;
@@ -255,6 +292,9 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   .container-icon {
     text-align: center;
     margin-bottom: 45px;
+    @include breakpoint(sm) { 
+      margin-bottom: 15px;
+    }
   }
   .svg-icon {
     fill: #fff;
@@ -268,12 +308,26 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     z-index: 1;
     font-size: 1.4em;
     text-align: center;
+    @include breakpoint(md) { 
+      font-size: 1em;
+    }
+    @include breakpoint(sm) { 
+      width: 80%;
+      margin-left: -40%;
+    }
+    @include breakpoint(xxs) { 
+      font-size: 0.9em;
+    }
     h2 {
       font-size: 2.5em;
     }
   }
 }
-
+.navbar-toggle {
+  .icon-bar {
+    background: #4a4a4a;
+  }
+}
 
 
 
@@ -286,21 +340,37 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   margin-bottom: 20px;
   h2 {
     margin-top: 0;
+    @include breakpoint(xs) { 
+      font-size: 1.6em;
+    }
   }
   .icon-container {
     display: inline-block;
     vertical-align: middle;
     margin-right: 5px;
+    @include breakpoint(xxs) { 
+      display: block;
+    }
   }
   .svg-icon {
     fill: #fff;
   }
 }
-
+.section-title.two {
+  margin-bottom: 0;
+  margin-top: 30px;
+}
 .content {
   margin-top: 7%;
   padding: 0 45px;
   margin-bottom: 50px;
+  @include breakpoint(md) { 
+    margin-top: 12%;
+    padding: 0 15px;
+  }
+  @include breakpoint(xs) { 
+    margin-top: 20%;
+  }
 }
 .hero-text {
   font-size: 1.2em;
@@ -338,6 +408,12 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
       text-align: center;
       margin: 0;
       padding: 15px 0;
+      @include breakpoint(sm) { 
+        font-size: 1.3em;
+      }
+      @include breakpoint(xs) { 
+        padding: 15px;
+      }
     }
     .search-tag {
       background: #d2d2d2;
@@ -357,7 +433,12 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     fill: #00b3b7;
   }
 }
-
+.search- {
+  .btn-purple {
+    margin: 15px auto;
+    display: block;
+  }
+}
 /*  map/list */ 
 #mapCanvas {
   width: 100%;
@@ -402,9 +483,15 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
       font-size: 0.8em;
       padding: 20px;
       padding-bottom: 0;
+      @include breakpoint(xs) { 
+        text-align: center;
+      }
     }
     .item-date {
       float: left;
+      @include breakpoint(sm) { 
+        float: none;
+      }
     }
     .item-info-bottom {
       overflow: hidden;
@@ -412,9 +499,15 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
       position: relative;
       padding: 20px;
       padding-top: 0;
+      @include breakpoint(sm) { 
+        text-align: center;
+      }
     }
     .item-title-wrapper {
       float: left;
+      @include breakpoint(sm) { 
+        float: none;
+      }
     }
     .item-title {
       margin-top: 0;
@@ -427,6 +520,10 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     .item-btn {
       float: right;
       padding: 10px 15px;
+      @include breakpoint(sm) { 
+        float: none;
+        margin-top: 15px;
+      }
     }
   }
 }
@@ -459,6 +556,10 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
 .bike-report-detail  {
   padding-bottom: 50px;
   background: #00b3b7;
+  @include breakpoint(xs) { 
+    text-align: center;        
+  }
+
   .content {
     background: #f6f6f6;
     padding-top: 30px;
@@ -491,6 +592,34 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   }
   .item-title {
     margin: 15px 0;
+    @include breakpoint(xs) { 
+      font-size: 1.4em;       
+    }
+    span {
+      @include breakpoint(md) { 
+        display: block;
+        margin-bottom: 10px;
+      }
+    }
+  }
+  .item-info {
+    @include breakpoint(md) { 
+      text-align: center;
+    }
+    .col-md-3 {
+      @include breakpoint(md) { 
+        margin-top: 15px;
+        padding-top: 15px;
+        border-top: solid 1px #cacaca;
+      }
+    }
+    .theft-status {
+      @include breakpoint(md) { 
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        border-bottom: solid 1px #cacaca;
+      }
+    }
   }
   .item-info-map {
     .item-btn {
@@ -514,6 +643,9 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
       margin-bottom: 10px;
       a {
         color: #fff;
+        @include breakpoint(md) { 
+          white-space: normal;        
+        }
       }
     }
   }
@@ -545,6 +677,9 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
 .store-report-detail  {
   padding-bottom: 50px;
   background: #00b3b7;
+  @include breakpoint(xs) { 
+    text-align: center;        
+  }
   .content {
     background: #f6f6f6;
     padding-top: 30px;
@@ -578,6 +713,31 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
       margin-top: 0;
     }
   }
+  .item-info {
+    @include breakpoint(md) { 
+      text-align: center;
+    }
+    .col-md-4 {
+      @include breakpoint(md) { 
+        margin-top: 15px;
+        padding-top: 15px;
+        border-top: solid 1px #cacaca;
+      }
+    }
+    .theft-status {
+      @include breakpoint(md) { 
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        border-bottom: solid 1px #cacaca;
+      }
+    }
+  }
+  .item-title {
+    margin: 15px 0;
+    @include breakpoint(xs) { 
+      font-size: 1.4em;       
+    }
+  }
   .item-info-map {
     .item-btn {
       display: none;
@@ -589,6 +749,7 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
       font-size: 0.8em;
     }
   }
+
   ul {
     list-style-type: none;
     padding-left: 0;
@@ -763,6 +924,16 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   }
   .btn-container {
     text-align: center;
+    .btn {
+      @include breakpoint(xs) { 
+        margin-bottom: 15px;
+      }
+    }
+    .btn-secondary {
+      @include breakpoint(xs) { 
+        margin-left: 0;
+      }
+    }
   }
   .btn-secondary {
     margin-left: 30px;
@@ -815,6 +986,18 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   background: none repeat scroll 0 0 #f52d32;
   padding-bottom: 50px;
   text-align: center;
+  .btn-container {
+    .btn {
+      @include breakpoint(xs) { 
+        margin-bottom: 15px;
+      }
+    }
+    .btn-purple {
+      @include breakpoint(xs) { 
+        margin-left: 0;
+      }
+    }
+  }
   .content {
     color: #fff;
     padding-bottom: 30px;
@@ -866,18 +1049,28 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
     li {
       overflow: hidden;
       border-color: #ae1d21;
+      position: relative;
     }
     a {
       float: left;
       line-height: 2.2em;
+      @include breakpoint(xs) { 
+        float: none;
+      }
     }
     span {
       float: right;
-      margin-right: 20px;
+      margin-right: 50px;
       padding-top: 5px;
+      @include breakpoint(xs) { 
+        float: none;
+        margin-right: 0;
+        display: block;
+      }
     }
     .btn-close {
-      float: right;
+      position: absolute;
+      right: 0;
       border-radius: 50%;
       background: #4d0069;
       padding: 5px 10px;
