--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%=  stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Varela+Round|Montserrat:700' %>
+  <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body class='custom'>
   <header>
@@ -39,8 +40,6 @@
             </li>
           </ul>
           </li>
-          <li class="disabled"><a href="blog.html">blog</a></li>
-          <li class="disabled"><a href="tienda.html">tienda</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
@@ -62,7 +61,6 @@
               </li>
             </ul>
             </li>
-            <li class="disabled"><a href="../navbar-static-top/">ayuda</a></li>
           </ul>
           <% else %>
             
@@ -92,23 +90,11 @@
                     </div>
                   <% end %>
                 </li>
-                <li class="divider"></li>
-                <li>
-                <a href="" class="link">
-                <span class="icon-container">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewbox="0 0 512 512"><g id="icomoon-ignore">
-                </g>
-                <path class="svg-icon" d="M426.675 0h-341.351c-47.125 0-85.324 38.21-85.324 85.343v341.315c0 47.133 38.199 85.342 85.324 85.342h170.676v-224h-64v-64h64v-48c0-44.183 35.817-80 80-80h80v64h-80c-8.837 0-16 7.164-16 16v48h88l-16 64h-72v224h106.675c47.125 0 85.325-38.209 85.325-85.342v-341.315c0-47.133-38.2-85.343-85.325-85.343z"></path>
-                </svg>
-                </span>
-                vía facebook </a>
-                </li>
               </ul>
             </li>
             <li>
               <%= link_to "registro", new_user_registration_path %>
             </li>
-            <li class="disabled"><a href="../navbar-static-top/">ayuda</a></li>
 
 
 
@@ -140,8 +126,6 @@
       <li>
       <%= link_to '¿qué es esto?', '/about' %>
       </li>
-      <li class="disabled"><a href="">términos de uso</a></li>
-      <li class="disabled"><a href="">política de privacidad</a></li>
     </ul>
   </div>
   <div class="copyright">
