--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -121,7 +121,9 @@ body {padding:0; margin:0; background: #00b3b7; min-height:100%; height: 100%;}
   top: 150px;
   z-index: 300;
 }
-
+.fancybox-margin {
+  margin-right: 0 !important;
+}
 /*  ----------------------------   
     NAV
 -------------------------------- */
