ajuste de contenido e identificación de versión de ruby para subir a heroku

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-4 col-md-offset-4 hero-text">
         <p>
-          Busque por serial de marco, color o marca.
+          Busque por el serial del marco o la marca de la bicicleta.
         </p>
       </div>
       <div class="col-md-4 col-md-offset-4 search-">
