--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,9 @@
   <div class="container-fluid main">
     <div class="cta">
       <div class="the-calling">
-        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Bienvenidos al proyecto GO</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam voluptatem itaque doloribus harum quae voluptates.
+          Registre su bicicleta, únase a nuestra comunidad y denuncie locales. Juntos ayudaremos a detener el comercio de bicicletas robadas.
         </p>
       </div>
       <div class="col-md-4 one">
@@ -17,7 +17,9 @@
           </div>
           <%= link_to 'registrar bici', new_bike_path %>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor impedit amet, aliquam perspiciatis sit laudantium?
+            Al registrar su bicicleta, agrega una capa más
+            de seguridad ya que permite que sea posible su
+            búsqueda en GO.
           </p>
         </div>
       </div>
@@ -33,7 +35,7 @@
           </div>
           <a href="#modal-report" class="fancybox">reportar</a>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe neque ratione, blanditiis suscipit molestiae cum! Quo aperiam.
+            Denuncie locales o el robo de su bicicleta para generar un registro de los hechos. De nosotros depende detener el comercio de bicicletas robadas. 
           </p>
         </div>
       </div>
@@ -47,7 +49,7 @@
           </div>
           <%= link_to 'buscar reportes', '/reports/index' %>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe neque ratione, blanditiis suscipit molestiae cum! Quo aperiam.
+            Confirme que usted no está haciendo parte del comercio ilegal de bicicletas robadas. Busque locales o bicicletas reportadas.
           </p>
         </div>
       </div>
