--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <%=  stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Varela+Round|Montserrat:700' %>
+  <%=  stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Varela+Round|Montserrat:700' %>
   <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body class='custom'>
