--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <%=  stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Varela+Round|Montserrat:700' %>
   <%= favicon_link_tag 'favicon.ico' %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class='custom'>
   <header>
