ajuste de typo en el home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid main">
     <div class="cta">
       <div class="the-calling">
-        <h2>Bienvenidos al proyecto GO</h2>
+        <h2>Bienvenidos a proyecto GO</h2>
         <p>
           Registre su bicicleta, únase a nuestra comunidad y denuncie locales. Juntos ayudaremos a detener el comercio de bicicletas robadas.
         </p>
